--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ node_modules/
 # Environment variables
 .env
 .env.local
+.env.*.local
+
+# Sensitive configuration
+config.local.js
 
 # Logs
 *.log
