--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "start": "node server.js",
     "dev": "node --watch server.js"
   },
-  "keywords": ["dem", "observability", "load-testing"],
+  "keywords": [
+    "dem",
+    "observability",
+    "load-testing"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@grafana/faro-web-sdk": "^2.1.0",
+    "@grafana/faro-web-tracing": "^2.1.0",
     "express": "^4.18.2"
   },
   "engines": {
     "node": ">=18.0.0"
   }
 }
-
